Fixed tooltip arrow border color which is too light

--- a/css/app.css
+++ b/css/app.css
@@ -27,6 +27,7 @@ body .tooltip::before {
 	border-top-color: transparent;
 	border-left-color: transparent;
 	border-right-color: transparent;
+	border-bottom-color: #0a0a0a;
 }
 
 body .tooltip::after {
